Bug 1258526 - Create SAPI object per speech to clear previous speech state at force. r=eeejay

When using the following script, stop method cannot clear pause state on SAPI backend.

speech.pause();
speech.stop();

Since SPF_PURGEBEFORESPEAK doesn't clear previous speech state, we should create SAPI object per speech instead of recycling it.


MozReview-Commit-ID: 2ajsTbauQpO

--HG--
extra : rebase_source : b72d3e1215e136f204afda18497b042112002995