dom/media/webspeech/synth/windows/SapiService.h
@@ -43,11 +43,11 @@ public:
 private:
   virtual ~SapiService();
 
+  already_AddRefed<ISpVoice> InitSapiInstance();
   bool RegisterVoices();
 
   nsRefPtrHashtable<nsStringHashKey, ISpObjectToken> mVoices;
   nsTArray<RefPtr<SapiCallback>> mCallbacks;
-  RefPtr<ISpVoice> mSapiClient;
 
   bool mInitialized;
 
